# optimal-polygon

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  evaluate  main.cpp  optimal_polygon  polygon_op
includes/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opt_algorithms.cpp  opt_algorithms.hpp
